# playwright-ast-coverage

./: .codacy.yml  .gitignore  .no-mistakes.yml  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  Cargo.toml  README.md  codecov.yml  coverage.json  coverage_check.txt  coverage_full_text.txt  coverage_missing.txt  coverage_report.txt  coverage_text.txt  lcov.info  lib_cov.txt  missing_config.rs.txt  package-lock.json  package.json  playwright_config_cov.txt  playwright_urls_cov.txt  pnpm-lock.yaml  vitest.config.js
.github/: dependabot.yml  labeler.yml
crates/next-to-fetch/: Cargo.toml
crates/next-to-fetch/src/: cli.rs  main.rs
crates/next-to-fetch/src/analyze/: file.rs  import_shape.rs  imports.rs  mod.rs  resolve.rs
crates/next-to-fetch/src/fetch/: cache_opts.rs  url_extract.rs  visit_helpers.rs  visitor.rs
crates/next-to-fetch/src/pipeline/: cache.rs  route_analysis.rs  run.rs  target.rs
crates/next-to-fetch/src/report/: types.rs
crates/next-to-fetch/src/tests/: cache_opts_tests.rs  import_shape_tests.rs  imports_tests.rs  run_args_tests.rs  run_with_base_root_tests.rs  target_tests.rs  url_extract_tests.rs
crates/next-to-fetch/tests/: cli.rs
crates/next-to-fetch/tests/common/: mod.rs
crates/no-mistakes/: Cargo.toml
crates/no-mistakes-core/: Cargo.toml
crates/no-mistakes-core/benches/: graph_related.rs
crates/no-mistakes-core/src/: ast.rs  config.rs  import_shape.rs  imports.rs  integration_tests.rs  lib.rs  routes.rs
crates/no-mistakes-core/src/ast/: tests.rs
crates/no-mistakes-core/src/cli/: mod.rs  tests.rs
crates/no-mistakes-core/src/codebase/: check_facts.rs  ci_workflows.rs  config.rs  md_links.rs  mod.rs  playwright_coverage.rs  test_filter.rs  timing.rs  ts_http_calls.rs  ts_process_spawn.rs  ts_resolver.rs  ts_symbols.rs  unique_exports.rs  workspaces.rs
crates/no-mistakes-core/src/codebase/check_facts/: tests.rs
crates/no-mistakes-core/src/codebase/ci_workflows/: tests.rs
crates/no-mistakes-core/src/codebase/config/: discovery.rs  project.rs  tests.rs
crates/no-mistakes-core/src/codebase/dependencies/: extract.rs  graph.rs  mod.rs  output.rs  tests.rs
crates/no-mistakes-core/src/codebase/md_links/: tests.rs
crates/no-mistakes-core/src/codebase/playwright_coverage/: tests.rs
crates/no-mistakes-core/src/codebase/rules/: agents_md_max_size.rs  mod.rs  rust_max_lines_per_file.rs  rust_no_inline_tests.rs  test_no_unmocked_dynamic_imports.rs  tests.rs
crates/no-mistakes-core/src/codebase/symbols/: mod.rs  output.rs  tests.rs
crates/no-mistakes-core/src/codebase/test_filter/: tests.rs
crates/no-mistakes-core/src/codebase/ts_http_calls/: tests.rs  walk.rs
crates/no-mistakes-core/src/codebase/ts_process_spawn/: tests.rs
crates/no-mistakes-core/src/codebase/ts_queues/: factory.rs  mod.rs  usage.rs
crates/no-mistakes-core/src/codebase/ts_resolver/: tests.rs
crates/no-mistakes-core/src/codebase/ts_routes/: defs_backend.rs  defs_frontend.rs  matcher.rs  mod.rs  refs.rs
crates/no-mistakes-core/src/codebase/ts_source/: facts.rs  jsx.rs  mod.rs  tests.rs
crates/no-mistakes-core/src/codebase/ts_symbols/: tests.rs
crates/no-mistakes-core/src/codebase/unique_exports/: collector.rs  findings.rs  nextjs.rs  origin.rs  scan.rs  tests.rs  types.rs  with_facts.rs
crates/no-mistakes-core/src/codebase/workspaces/: tests.rs
crates/no-mistakes-core/src/config/: tests.rs
crates/no-mistakes-core/src/config/v2/: discover.rs  legacy.rs  mod.rs  schema.rs  tests.rs  view.rs
crates/no-mistakes-core/src/fetch/: cache.rs  cache_opts.rs  file_analysis.rs  import_routes.rs  imports.rs  mod.rs  resolve.rs  route_analysis.rs  types.rs  url_extract.rs  visit_helpers.rs  visitor.rs
crates/no-mistakes-core/src/fetch/cache_opts/: mod.rs  tests.rs
crates/no-mistakes-core/src/imports/: tests.rs
crates/no-mistakes-core/src/integration_tests/: analysis.rs  calls.rs  config.rs  enforce.rs  project_config.rs  resolve.rs  tests.rs  tests_errors.rs  tests_resolution.rs  tests_review.rs  types.rs
crates/no-mistakes-core/src/queue/: extract.rs  extract_helpers.rs  extract_model.rs  extract_record.rs  graph.rs  graph_build.rs  graph_model.rs  graph_related.rs  mod.rs  resolver.rs  source.rs  tests.rs  types.rs
crates/no-mistakes-core/src/react_traits/: mod.rs
crates/no-mistakes-core/src/routes/: tests.rs
crates/no-mistakes-core/src/server_routes/: extract.rs  graph.rs  mod.rs  model.rs  mounts.rs  normalize.rs  related.rs  source.rs  tests.rs  types.rs
crates/no-mistakes-core/tests/: shared_facts.rs
crates/no-mistakes/src/: check.rs  check_discovery.rs  check_parallel.rs  check_runner.rs  check_tasks.rs  main.rs  queues.rs  react.rs  server.rs
crates/no-mistakes/src/check_discovery/: tests.rs
crates/no-mistakes/src/check_runner/: results.rs  tests.rs
crates/no-mistakes/tests/: cli.rs  cli_check_rules.rs  cli_codebase_acceptance.rs  cli_extra.rs  cli_extra2.rs  cli_format.rs  cli_format2.rs  cli_proxy.rs  cli_unique_exports.rs
crates/no-mistakes/tests/cli_codebase_acceptance/: basic.rs  common.rs  graph.rs  workspace.rs
crates/queue-ast-hop/: Cargo.toml
crates/queue-ast-hop/src/: cli.rs  main.rs
crates/queue-ast-hop/src/report/: mod.rs
crates/queue-ast-hop/tests/: cli.rs
crates/react-traits/: Cargo.toml
crates/react-traits/src/: cli.rs  lib.rs  main.rs
crates/react-traits/src/analyze/: components.rs  environment.rs  file.rs  import_table.rs  jsx_children.rs
crates/react-traits/src/pipeline/: check.rs  glob.rs  mod.rs  run.rs
crates/react-traits/src/report/: mod.rs  text.rs  types.rs
crates/react-traits/src/tests/: mod.rs
crates/react-traits/src/traits/: context.rs  fetch.rs  memo.rs  mod.rs  props.rs  state.rs  suspense.rs
crates/react-traits/tests/: cli_analyze.rs  cli_check.rs
crates/react-traits/tests/common/: mod.rs
(+1259 files in other folders)
