[package]
name = "playwright-ast-coverage"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Static Playwright AST coverage for Next.js App Router routes"
repository = "https://github.com/jonathanong/playwright-ast-coverage"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
jsonc-parser = { version = "0.32", features = ["serde"] }
oxc_allocator = "0.130.0"
oxc_ast = "0.130.0"
oxc_ast_visit = "0.130.0"
oxc_parser = "0.130.0"
oxc_span = "0.130.0"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints.rust]
unused_imports = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }

[lints.clippy]
all = "warn"
