[package]
name = "no-mistakes-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Core shared logic for no-mistakes static analysis tools"

[dependencies]
anyhow = "1"
jsonc-parser = { version = "0.32", features = ["serde"] }
oxc_allocator = "0.130.0"
oxc_ast = "0.130.0"
oxc_parser = "0.130.0"
oxc_span = "0.130.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
