[package]
name = "no-mistakes-core"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "Core shared logic for no-mistakes static analysis tools"
repository = "https://github.com/jonathanong/no-mistakes"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
is-terminal = "0.4"
jsonc-parser = { version = "0.32", features = ["serde"] }
num_cpus = "1.16"
oxc = { version = "0.130.0", features = ["full"] }
oxc_allocator = "0.130.0"
oxc_ast = "0.130.0"
oxc_ast_visit = "0.130.0"
oxc_parser = "0.130.0"
oxc_span = "0.130.0"
oxc_syntax = "0.130.0"
pulldown-cmark = "0.13"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1"
walkdir = "2"

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3"

[[bench]]
name = "graph_related"
harness = false
