[package]
name = "no-mistakes"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Static analysis tools for codebase dependency and symbol queries"
repository = "https://github.com/jonathanong/playwright-ast-coverage"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
no-mistakes-core = { path = "../no-mistakes-core", version = "0.2.0" }
num_cpus = "1.16"
rayon = "1.10"
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
