[package]
name = "queue-ast-hop"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "Static queue dependency graph for BullMQ and glide-mq"
repository = "https://github.com/jonathanong/no-mistakes"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
no-mistakes-core = { path = "../no-mistakes-core", version = "0.3.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints.rust]
unused_imports = "warn"

[lints.clippy]
all = "warn"
