[package]
name = "react-traits"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Scan React components and report their traits"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
no-mistakes-core = { path = "../no-mistakes-core", version = "0.2.0" }
oxc_allocator = "0.130.0"
oxc_ast = "0.130.0"
oxc_ast_visit = "0.130.0"
oxc_parser = "0.130.0"
oxc_span = "0.130.0"
oxc_syntax = "0.130.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
globset = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
